--- a/index.html
+++ b/index.html
@@ -83,24 +83,22 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "mermaid": "https://esm.sh/mermaid@^11.12.2",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "marked": "https://esm.sh/marked@^17.0.1",
-    "marked-highlight": "https://esm.sh/marked-highlight@^2.2.3",
-    "highlight.js": "https://esm.sh/highlight.js@^11.11.1",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "react": "https://esm.sh/react@^19.2.3",
+    "marked": "https://esm.sh/marked@^15.0.0",
+    "marked-highlight": "https://esm.sh/marked-highlight@^2.2.1",
+    "highlight.js": "https://esm.sh/highlight.js@^11.9.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.4"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
